add missing environments

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,3 @@
-###############################
-# Environment Config #
-###############################
-
 # Bot Token [Required]
 BOT_TOKEN=
 
@@ -12,25 +8,23 @@ MONGO_CONNECTION=
 ERROR_LOGS=
 JOIN_LEAVE_LOGS=
 
-# Reddit [Required for meme command]
+# Reddit [Optional]
 REDDIT_CLIENT_ID=
 REDDIT_CLIENT_SECRET=
 REDDIT_USERNAME=
 REDDIT_PASSWORD=
 
-# Anilist api url [Required for anime command]
+# Anilist api url [Optional]
 ANILIST_API_URL=
 
 # Omdapi [Required for movie command]
 OMDAPI_KEY=
 
-# Anilist Api url [ Required for anime commands ]
-ANILIST_API_URL=
+# Gemini Api [Required for chatbot]
+GEMINI_API_KEY=
 
-# TOD api url [Required for truth and dare command]
+# TOD api url [Optional]
 TOD_API_URL=
 
 # Genius api key [Required for lyrics command]
 GENIUS_API=
-
-NODE_NO_WARNINGS=1
