--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "dev": "nodemon .",
-    "format": "prettier --write src",
+    "format": "prettier --list-different --write src",
     "start": "npm install && npm run start"
   },
   "homepage": "https://github.com/saiteja-madha/discord-js-bot#readme",
@@ -22,55 +21,53 @@
     "url": "https://github.com/saiteja-madha/discord-js-bot/issues"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.11.1",
+    "@google/generative-ai": "^0.21.0",
     "aaru-translator": "^1.0.1",
     "ascii-table": "0.0.9",
-    "axios": "^1.6.8",
+    "axios": "^1.7.9",
     "btoa": "^1.2.1",
-    "bufferutil": "^4.0.7",
+    "bufferutil": "^4.0.8",
     "common-tags": "^1.8.2",
-    "connect-mongo": "^5.0.0",
-    "country-emoji-languages": "^1.0.0",
-    "discord-gamecord": "^4.4.0",
+    "connect-mongo": "^5.1.0",
+    "country-emoji-languages": "^1.0.1",
+    "discord-gamecord": "^4.4.2",
     "discord-giveaways": "^6.0.1",
     "discord-together": "^1.3.31",
-    "discord.js": "^14.14.1",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.9",
-    "enhanced-ms": "^2.3.0",
+    "discord.js": "^14.16.3",
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
+    "enhanced-ms": "^3.0.0",
     "erlpack": "^0.1.4",
-    "express": "^4.19.2",
-    "express-session": "^1.17.3",
-    "fixedsize-map": "^1.0.1",
-    "formidable": "^3.5.1",
-    "genius.ts": "^0.0.1-beta-5",
-    "iso-639-1": "^2.1.15",
-    "lavalink-client": "^2.4.0",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "fixedsize-map": "^1.1.0",
+    "formidable": "^3.5.2",
+    "genius.ts": "^0.0.1-beta-7",
+    "iso-639-1": "^3.1.3",
+    "lavalink-client": "^2.4.3",
     "module-alias": "^2.2.3",
     "moment": "^2.30.1",
-    "mongoose": "^7.3.4",
+    "mongoose": "^8.9.2",
     "musicard": "^2.0.5",
     "nekos.life": "^3.0.0",
-    "node-fetch": "^2.6.9",
+    "node-fetch": "^3.3.2",
     "node-osu": "^2.2.1",
     "os": "^0.1.2",
-    "pino": "^8.14.1",
-    "pino-pretty": "^10.0.1",
-    "prettier": "3.0.0",
-    "rankcard": "^1.1.7",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
+    "prettier": "3.4.2",
+    "rankcard": "^1.2.8",
     "sourcebin_js": "^0.0.3-ignore",
     "string-progressbar": "^1.0.4",
-    "superagent": "^10.1.0",
-    "table": "^6.8.1",
+    "superagent": "^10.1.1",
+    "table": "^6.9.0",
     "timestamp-to-date": "^1.1.0",
     "twemoji-parser": "^14.0.0",
-    "utf-8-validate": "^6.0.3",
-    "vrchat": "^1.11.1",
-    "zlib-sync": "^0.1.8"
+    "utf-8-validate": "^6.0.5",
+    "vrchat": "^1.18.8",
+    "zlib-sync": "^0.1.9"
   },
   "devDependencies": {
-    "node": "^20.4.0",
-    "nodemon": "^3.0.1",
     "prettier": "3.2.5"
   },
   "credits": {
